# AirSimLearning

./: .gitignore  .swp  README.md
PythonClient/airsim/: client.py
PythonClient/multirotor/: box.py
settings/: front_stereo_and_center_mono.json  twenty_five_drones.json  two_drones_camera_lidar_imu.json
src/airsim_ros/: CMakeLists.txt  package.xml
src/airsim_ros_pkgs/: CMakeLists.txt
src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
src/airsim_ros_pkgs/msg/: RotorPWM.msg
src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
